# Learning_AppiumWithRobot

./: hello.py  hello.robot  home.robot  interactive_console_output.xml  log.html  nav.robot  output.xml  pyproject.toml  readme.md  report.html
Logs/: log.html  output.xml  report.html
Resources/: Controller.robot  Functions.robot
Tests/: 1-home.robot  2-nav.robot  3-login.robot  4-radio.robot  5-checkbox.robot  6-botoes.robot  7-spinner.robot  8-swipe.robot  drag_and_drop.robot  login.robot  nav.robot
settings/libs/: DragAndDrop.py
