[tool.poetry]
name = "Robot-Appium"
version = "0.0.1"
description = "Learning Appium with RobotFramework"
authors = ["Tiago Gomes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^5.0.1"
Appium-Python-Client = "2.1.2"
robotframework-appiumlibrary = "1.6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
